@@ -4,6 +4,7 @@
 package com.mojang.realmsclient.exception;
 
 import com.mojang.realmsclient.client.RealmsError;
+import java.util.Locale;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.client.resources.language.I18n;
@@ -36,9 +37,9 @@ extends Exception {
         if (this.realmsError != null) {
             String string = "mco.errorMessage." + this.realmsError.getErrorCode();
             String string2 = I18n.exists(string) ? I18n.get(string, new Object[0]) : this.realmsError.getErrorMessage();
-            return "Realms service error (%d/%d) %s".formatted(this.httpResultCode, this.realmsError.getErrorCode(), string2);
+            return String.format(Locale.ROOT, "Realms service error (%d/%d) %s", this.httpResultCode, this.realmsError.getErrorCode(), string2);
         }
-        return "Realms service error (%d) %s".formatted(this.httpResultCode, this.rawResponse);
+        return String.format(Locale.ROOT, "Realms service error (%d) %s", this.httpResultCode, this.rawResponse);
     }
 
     public int realmsErrorCodeOrDefault(int i) {
