@@ -3,6 +3,7 @@
  */
 package net.minecraft.util;
 
+import java.util.Locale;
 import java.util.UUID;
 import java.util.function.IntPredicate;
 import java.util.stream.IntStream;
@@ -805,10 +806,10 @@ public class Mth {
 
     public static IntStream outFromOrigin(int i, int j, int k, int l2) {
         if (j > k) {
-            throw new IllegalArgumentException("upperbound %d expected to be > lowerBound %d".formatted(k, j));
+            throw new IllegalArgumentException(String.format(Locale.ROOT, "upperbound %d expected to be > lowerBound %d", k, j));
         }
         if (l2 < 1) {
-            throw new IllegalArgumentException("steps expected to be >= 1, was %d".formatted(l2));
+            throw new IllegalArgumentException(String.format(Locale.ROOT, "steps expected to be >= 1, was %d", l2));
         }
         if (i < j || i > k) {
             return IntStream.empty();
